[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmgovernor-sdks"
version = "0.0.0"
description = "Monorepo for LLMGovernor SDKs (Python and TypeScript)"
readme = "README.md"
authors = [{name = "Vivekreddy99"}]
license = {text = "MIT"}
requires-python = ">=3.11"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = ["python/**", "typescript/**", "docs/**", "examples/**", "LICENSE", "README.md"]

[tool.hatch.envs.default]
dependencies = []

[tool.hatch.envs.default.scripts]
# Each subproject will manage its own env/pyproject. This root is informational.
