[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmgovernor-otel"
version = "0.1.0"
description = "LLMGovernor OpenTelemetry integration"
readme = "README.md"
authors = [{name = "Vivekreddy99"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []
