[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmgovernor"
version = "0.1.0"
description = "LLMGovernor core SDK"
readme = "README.md"
authors = [{name = "Vivekreddy99"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["llmgovernor"]

[tool.hatch.build]
packages = ["llmgovernor"]
include = ["py.typed"]
